# CaseStudy_FinanceRocks

./: .gitignore  CONTRIBUTING.md  HISTORY.md  README.md  fix_pytest.sh  justfile  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  test_import.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  python-eda.yml
docs/: index.md  installation.md  usage.md
src/CaseStudy_FR/: CaseStudy_FR.py  CaseStudy_FR_v01.py  __init__.py  cli.py
src/CaseStudy_FinanceRocks/: __init__.py  core.py  utils.py
tests/: __init__.py  debug_init.py  old_test_CaseStudy_FinanceRocks.py  test_CaseStudy_FR.py  test_CaseStudy_FinanceRocks.py  test_core.py
