[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CaseStudy_FinanceRocks"
version = "0.1.0"
authors = [
  {name = "Sharat Sharma", email = "sharat.katz@gmail.com"},
]
description = "Automated Exploratory Data Analysis tool for Parquet datasets"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=1.5.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
finance-rocks-eda = "CaseStudy_FinanceRocks.core:main"

[tool.setuptools.packages.find]
where = ["src"]
