[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CaseStudy_FinanceRocks"
dynamic = ["version"]
description = "Automated Exploratory Data Analysis tool for Parquet datasets"
authors = [
    {name = "Sharat Sharma", email = "sharat.katz@gmail.com"}, ]
dependencies = [
    "pandas>=1.5.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0", ]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0", ]